fixed logo spacing on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,22 +6,6 @@
 * License: https://bootstrapmade.com/license/
 */
 
-/*--------------------------------------------------------------
-# Main logo
---------------------------------------------------------------*/
-
-/* .main-logo {
-  flex: 1 1 150px;
-  display: flex;
-  align-self: center;
-
-
-}
-
-.main-logo img {
-
-  object-fit: cover;
-} */
 
 /*--------------------------------------------------------------
 # Font & Color Variables
